--- a/work/Pages/WebsocketPvp.xaml
+++ b/work/Pages/WebsocketPvp.xaml
@@ -6,9 +6,7 @@
       xmlns:local="clr-namespace:work.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="PVP"
-      Loaded="WebsocketPvp_Loaded"
-      >
+      Title="PVP">
 
     <Page.Resources>
         <Style x:Key="ctrlButton" TargetType="Button">
@@ -85,11 +83,8 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="1" Background="Aqua" x:Name="left"></TextBlock>
-        <TextBlock Grid.Row="1" Background="Aqua" Grid.Column="8" x:Name="right"></TextBlock>
+
         <!--倒计时-->
-        <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-        <TextBlock Name="CountdownTextBlock2" Grid.Column="7" Grid.Row="3" Grid.RowSpan="2" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="7" Content="Player vs Player" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="30" FontWeight="Bold" Foreground="#4A8CCB"/>
         <Button Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding BackText, Mode=TwoWay, TargetNullValue=返回主页}" Style="{StaticResource ctrlButton}" Click="jumpBackToMain"/>
         <Button Grid.Column="5" Grid.Row="7" Grid.ColumnSpan="2" Content="{Binding MatchText, Mode=TwoWay, TargetNullValue=开始匹配}" Style="{StaticResource ctrlButton}" Click="startToMatch"/>
@@ -103,7 +98,7 @@
                         MouseLeftButtonDown="myCanvas_MouseLeftButtonDown"
                         SizeChanged="myCanvas_SizeChanged"
                         Width="{Binding CanvasWidth}"
-                        Margin="112,0,112,0">
+                        >
 
                     <Grid Width="{Binding ActualWidth, ElementName=myCanvas}" Height="{Binding ActualHeight, ElementName=myCanvas}">
                         <Grid.RowDefinitions>
@@ -177,6 +172,75 @@
 
                 </Canvas>
             </Border>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Viewbox Stretch="Uniform">
+                <Ellipse HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="120" >
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="../Images/user.png" />
+                    </Ellipse.Fill>
+                </Ellipse>
+            </Viewbox>
+            <Viewbox Stretch="Uniform" Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom">
+                <TextBlock  HorizontalAlignment="Center" VerticalAlignment="Center" Text="超级无敌暴龙战士" FontSize="20" Foreground="White"/>
+            </Viewbox>
+        </Grid>
+
+        <Grid Grid.Column="6" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Viewbox Stretch="Uniform" Grid.Column="1">
+                <Ellipse HorizontalAlignment="Center" VerticalAlignment="Center" Width="120" Height="120" >
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="../Images/user.png" />
+                    </Ellipse.Fill>
+                </Ellipse>
+            </Viewbox>
+            <Viewbox Stretch="Uniform" Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom">
+                <TextBlock  HorizontalAlignment="Center" VerticalAlignment="Center" Text="超级无敌暴龙战士" FontSize="20" Foreground="White"/>
+            </Viewbox>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="8*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="6*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Name="CountdownTextBlock1" Grid.Column="1" Grid.Row="1" Text="{Binding OurSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Column="6" Grid.Row="4" Grid.RowSpan="3" Grid.ColumnSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="8*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="6*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Name="CountdownTextBlock2" Grid.Column="1" Grid.Row="1" Text="{Binding OppSide}" Foreground="WhiteSmoke" Panel.ZIndex="10" FontSize="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         </Grid>
     </Grid>
 </Page>
