--- a/work/Pages/Home.xaml
+++ b/work/Pages/Home.xaml
@@ -81,16 +81,16 @@
                 <ColumnDefinition Width="3.5*"/>
             </Grid.ColumnDefinitions>
 
-            <TextBlock Text="BlueBox" FontWeight="Bold" FontSize="16" Foreground="#3DD0FB" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock FontWeight="Bold" FontSize="16" Foreground="#3DD0FB" VerticalAlignment="Center" HorizontalAlignment="Center"><Run Language="zh-cn" Text="珞珈争霸"/></TextBlock>
 
             <UniformGrid Columns="2" Grid.Column="1" VerticalAlignment="Center">
                 <StackPanel Orientation="Horizontal" Margin="15 0 0 0"/>
 
                 <StackPanel HorizontalAlignment="Right" Margin="0 0 15 0">
                     <StackPanel Grid.Column="1" Orientation="Horizontal">
-                        <Image Source="../Images/user.png" Width="40" Height="40" Stretch="Fill">
+                        <Image Source="../Images/WHU.png" Width="40" Height="40" Stretch="Fill">
                             <Image.Clip>
-                                <EllipseGeometry RadiusX="20" RadiusY="20" Center="20,20"/>
+                                <EllipseGeometry RadiusX="20"  RadiusY="20" Center="20,20"/>
                             </Image.Clip>
                         </Image>
 
@@ -113,9 +113,18 @@
                     <TextBlock Text="Admin" Foreground="#959595"/>
                 </StackPanel>
             </StackPanel>
+          
             <StackPanel Grid.Row="2" VerticalAlignment="Bottom" Margin="0,0,0,30">
-                <Button Width="177" Height="40" Name="Setting"  Content="设    置" Click="setting" Background="#3DD0FB" BorderBrush="#3DD0FB"  Foreground="White" FontSize="16" HorizontalAlignment="Left"/>
-                <Button Width="177" Height="40" Name="Logout"  Content="退出登录" Click="logout" Background="#3DD0FB" BorderBrush="#3DD0FB"  Foreground="White" FontSize="16" HorizontalAlignment="Left"/>
+                <StackPanel Orientation="Horizontal" Background="#3DD0FB">
+                    <TextBlock Text="&#xe605;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="Black" VerticalAlignment="Center" Margin="10 0 0 0"/>
+                    <Button Width="150" Height="40" Name="Setting"  Content="设    置" Click="setting" Background="#3DD0FB" BorderBrush="#3DD0FB"  Foreground="White" FontSize="16" HorizontalAlignment="Left"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,0,0,10" Background="#3DD0FB">
+                    <TextBlock Text="&#xe61f;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="Black" VerticalAlignment="Center" Margin="10 0 0 0"/>
+                    <Button Width="177" Height="40" Name="Logout"  Content="退出登录" Click="logout" Background="#3DD0FB" BorderBrush="#3DD0FB"  Foreground="White" FontSize="16" HorizontalAlignment="Left"/>
+                </StackPanel>
+             
 
             </StackPanel>
 
@@ -126,7 +135,7 @@
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock FontSize="14" VerticalAlignment="Bottom" Foreground="#959595" Margin="15 0 0 0" ><Run Text="Mode "/><Run Language="zh-cn" Text="S"/><Run Text="election"/></TextBlock>
+                <TextBlock HorizontalAlignment="Center" FontFamily="KaiTi" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom" Foreground="#959595" Margin="15 0 0 0" ><Run Text="模式"/><Run Language="zh-cn" Text=""/><Run Text="选择"/></TextBlock>
 
                 <UniformGrid Grid.Row="1" Columns="3">
 
@@ -147,8 +156,8 @@
                                 <RowDefinition Height="2*"/>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Text="&#xe6cf;" FontFamily="Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
-                            <TextBlock Text="Stock Total" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
+                            <TextBlock Text="&#xec5f;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
+                            <TextBlock Text="AI Game" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
                             <TextBlock Text="人机对战" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
@@ -186,8 +195,8 @@
                                 <RowDefinition Height="2*"/>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Text="&#xe602;" FontFamily="Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
-                            <TextBlock Text="Total Proflt" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
+                            <TextBlock Text="&#xe659;" FontFamily="/work;component/Fonts/#iconfont"  FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
+                            <TextBlock Text="Online Game" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
                             <TextBlock Text="在线对战" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
@@ -216,8 +225,8 @@
                                 <RowDefinition Height="2*"/>
                             </Grid.RowDefinitions>
 
-                            <TextBlock Text="&#xe634;" FontFamily="Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
-                            <TextBlock Text="Unique Visitors" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
+                            <TextBlock Text="&#xe600;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="White" VerticalAlignment="Bottom" Margin="10 0 0 0"/>
+                            <TextBlock Text="Local Game" Grid.Row="1" VerticalAlignment="Center" FontSize="8" Margin="10 0 0 0" Foreground="White"/>
                             <TextBlock Text="本地对战" FontWeight="Bold" VerticalAlignment="Center" Grid.Row="2" FontSize="15" Margin="10 0 0 0" Foreground="White"/>
 
 
@@ -242,8 +251,8 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Margin="15 0 0 0" VerticalAlignment="Center" FontSize="11" Foreground="#959595">
-        <Run Language="zh-cn" Text="History Table"/>
+                    <TextBlock Text="&#xe75b;" FontFamily="/work;component/Fonts/#iconfont" FontSize="25" Foreground="Black" VerticalAlignment="Center" Margin="10 0 0 0"/>
+                    <TextBlock Margin="50 0 0 0" FontWeight="Bold" VerticalAlignment="Center" FontSize="15" Foreground="Black"><Run Language="zh-cn" Text="历史记录"/>
                     </TextBlock>
                     <!-- Insert Elements Here -->
                     <Grid Grid.Row="1" Margin="0 10 0 0">
@@ -256,11 +265,11 @@
                         </Grid.ColumnDefinitions>
 
                         <!-- Header Row -->
-                        <TextBlock Grid.Column="0" Text="Name" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
-                        <TextBlock Grid.Column="1" Text="Email" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
-                        <TextBlock Grid.Column="2" Text="Address" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
-                        <TextBlock Grid.Column="3" Text="UserType" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
-                        <TextBlock Grid.Column="4" Text="Level" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
+                        <TextBlock Grid.Column="0" Text="ID" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
+                        <TextBlock Grid.Column="1" Text="Type" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
+                        <TextBlock Grid.Column="2" Text="Time" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
+                        <TextBlock Grid.Column="3" Text="Result" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
+                        <TextBlock Grid.Column="4" Text="Detail" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595" FontWeight="Bold"/>
 
                         <!-- Data Row (Example) -->
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Name}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595"/>
@@ -269,17 +278,17 @@
                         <TextBlock Grid.Row="1" Grid.Column="3" Text="{Binding UserType}" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#959595"/>
                         <Button Grid.Row="1" Grid.Column="4" Width="75" Height="25" BorderThickness="0" Content="{Binding Status}" Foreground="White" Background="{Binding BackColor}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Grid>
-
+                    <ListBox Grid.Row="2" x:Name="historyListBox" ItemsSource="{Binding HistoryViewModel.MoveRecords}" Background="White" BorderBrush="Gray" BorderThickness="0" Template="{StaticResource ListBoxTemplate}" >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Button Content="{Binding MoveString}" Command="{Binding DataContext.HistoryViewModel.SelectCommand, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding}" Style="{StaticResource MoveRecordButtonStyle}"/>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
                 </Grid>
 
                 <!-- ListBox for MoveRecords -->
-                <ListBox Grid.Row="2" x:Name="historyListBox" ItemsSource="{Binding HistoryViewModel.MoveRecords}" Background="White" BorderBrush="Gray" BorderThickness="0" Template="{StaticResource ListBoxTemplate}" >
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Button Content="{Binding MoveString}" Command="{Binding DataContext.HistoryViewModel.SelectCommand, RelativeSource={RelativeSource AncestorType=ListBox}}" CommandParameter="{Binding}" Style="{StaticResource MoveRecordButtonStyle}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+               
             </Grid>
 
 
